name:                miso-viso
version:             0.1.0.0
synopsis:            Visualization in miso
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  build-depends:       base, miso
  default-language:    Haskell2010
